[gd_scene load_steps=18 format=3 uid="uid://criwyop3p7mf7"]

[ext_resource type="Script" path="res://Player.gd" id="1_prdl4"]
[ext_resource type="AudioStream" uid="uid://cpurb32ryxb24" path="res://Audio/SFX - Death Explosion.ogg" id="2_qm8ab"]
[ext_resource type="AudioStream" uid="uid://ckdyjc52c562i" path="res://Audio/SFX - Success.ogg" id="3_4rjs6"]
[ext_resource type="AudioStream" uid="uid://bsas1j467nsap" path="res://Audio/SFX - Main engine thrust.ogg" id="4_schmq"]
[ext_resource type="PackedScene" uid="uid://if4f2mjpxgbd" path="res://Particles/booster_particles.tscn" id="5_o5d85"]
[ext_resource type="PackedScene" uid="uid://dcecb8hw7dbrv" path="res://Particles/explosion_particles.tscn" id="6_o3jpr"]
[ext_resource type="PackedScene" uid="uid://jfwajmrh6ca7" path="res://Particles/success_particles.tscn" id="7_f8rlm"]
[ext_resource type="Material" uid="uid://bnvade62br762" path="res://ShipRedMaterial.tres" id="8_rj2od"]

[sub_resource type="CylinderMesh" id="CylinderMesh_iymn5"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_b7vn2"]

[sub_resource type="CylinderMesh" id="CylinderMesh_gto7g"]
top_radius = 0.2
bottom_radius = 0.2
height = 1.5

[sub_resource type="CylinderMesh" id="CylinderMesh_a6eex"]
top_radius = 0.0
bottom_radius = 0.2
height = 0.5

[sub_resource type="CylinderMesh" id="CylinderMesh_6yr6l"]
top_radius = 0.25
bottom_radius = 0.25
height = 0.3

[sub_resource type="CylinderMesh" id="CylinderMesh_75352"]
top_radius = 0.25
bottom_radius = 0.25
height = 0.4

[sub_resource type="BoxMesh" id="BoxMesh_1t2j2"]
size = Vector3(0.2, 0.4, 0.2)

[sub_resource type="CylinderMesh" id="CylinderMesh_qmveh"]
top_radius = 0.15
bottom_radius = 0.15
height = 0.4

[sub_resource type="TorusMesh" id="TorusMesh_12p6r"]
inner_radius = 0.4
outer_radius = 0.5

[node name="Player" type="RigidBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -5)
axis_lock_linear_z = true
axis_lock_angular_x = true
axis_lock_angular_y = true
max_contacts_reported = 10
contact_monitor = true
linear_damp = 1.0
angular_damp = 3.0
script = ExtResource("1_prdl4")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 5)
visible = false
mesh = SubResource("CylinderMesh_iymn5")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 4.99575)
shape = SubResource("CylinderShape3D_b7vn2")

[node name="ExplosionAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_qm8ab")

[node name="LevelCompleteAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_4rjs6")

[node name="RocketAudio" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 5)
stream = ExtResource("4_schmq")

[node name="BoosterParticles" parent="." instance=ExtResource("5_o5d85")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 5.001)

[node name="BoosterParticlesLeft" parent="." instance=ExtResource("5_o5d85")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.463741, -0.90129, 5.001)

[node name="BoosterParticlesRight" parent="." instance=ExtResource("5_o5d85")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.443265, -0.920774, 5.001)

[node name="ExplosionParticles" parent="." instance=ExtResource("6_o3jpr")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 5)

[node name="SuccessParticles" parent="." instance=ExtResource("7_f8rlm")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 5)

[node name="Body" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.25, 5)
material_override = ExtResource("8_rj2od")
mesh = SubResource("CylinderMesh_gto7g")

[node name="Cockpit" type="MeshInstance3D" parent="Body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
material_override = ExtResource("8_rj2od")
mesh = SubResource("CylinderMesh_a6eex")
skeleton = NodePath("../..")

[node name="Midriff" type="MeshInstance3D" parent="Body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, 0)
material_override = ExtResource("8_rj2od")
mesh = SubResource("CylinderMesh_6yr6l")

[node name="Thruster" type="MeshInstance3D" parent="Body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.55, 0)
material_override = ExtResource("8_rj2od")
mesh = SubResource("CylinderMesh_75352")

[node name="LeftArm" type="MeshInstance3D" parent="Body"]
transform = Transform3D(0.587729, 0.809058, 0, -0.809058, 0.587729, 0, 0, 0, 1, -0.225392, -0.179135, 0)
material_override = ExtResource("8_rj2od")
mesh = SubResource("BoxMesh_1t2j2")

[node name="Thruster" type="MeshInstance3D" parent="Body/LeftArm"]
transform = Transform3D(0.680746, -0.732519, 0, 0.732519, 0.680746, 0, 0, 0, 1, 0.068438, -0.307317, 0)
material_override = ExtResource("8_rj2od")
mesh = SubResource("CylinderMesh_qmveh")

[node name="RightArm" type="MeshInstance3D" parent="Body"]
transform = Transform3D(-0.587785, -0.809017, -8.74228e-08, -0.809017, 0.587785, 0, 5.13858e-08, 7.07265e-08, -1, 0.22, -0.179, 0)
material_override = ExtResource("8_rj2od")
mesh = SubResource("BoxMesh_1t2j2")

[node name="Thruster" type="MeshInstance3D" parent="Body/RightArm"]
transform = Transform3D(0.680746, -0.732519, 0, 0.732519, 0.680746, 0, 0, 0, 1, 0.068438, -0.307317, 0)
material_override = ExtResource("8_rj2od")
mesh = SubResource("CylinderMesh_qmveh")

[node name="BaseRing" type="MeshInstance3D" parent="Body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.432937, 0)
material_override = ExtResource("8_rj2od")
mesh = SubResource("TorusMesh_12p6r")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
